--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,12 +28,17 @@ jobs:
       - name: Install dependencies
         run: |
           cd assignment4_starter_code  # Navigate to the folder with the Makefile
-          make install  # This will run `make install` to set up the virtual environment and install dependencies
+          ls -la  # List contents to confirm we're in the correct directory
+          python3 -m venv venv  # Explicitly create the virtual environment
+          . venv/bin/activate  # Activate the virtual environment
+          pip install --upgrade pip  # Upgrade pip
+          pip install -r requirements.txt  # Install dependencies
 
-      # 4. Navigate to the directory and run the Flask application in the background
+      # 4. Run the Flask application in the background
       - name: Run the application
         run: |
           cd assignment4_starter_code  # Navigate to the folder with the Makefile
+          . ./venv/bin/activate  # Activate the virtual environment
           make run &  # This will run the Flask application in the background
           sleep 10  # Give the server some time to start
 
@@ -46,7 +51,7 @@ jobs:
       - name: Lint with flake8
         run: |
           cd assignment4_starter_code  # Navigate to the folder with the Makefile
-          . venv/bin/activate  # Activate the virtual environment
+          . ./venv/bin/activate  # Activate the virtual environment
           pip install flake8  # Ensure flake8 is installed
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=venv
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=venv
